2001-10-21  Andreas Kupries <andreas_kupries@users.sourceforge.net>

	* The changes below are made as part of accepting SF patch #470211
	  provided by Pat Thoyts <patthoyts@users.sourceforge.net>

	* uri.n: Documented "uri::register".

	* urn-scheme.tcl: Changed to use the new registration
	  command. Added declaration of "schemepart" as that variable is
	  required for the registration.

	* uri.tcl (uri::register): New command to register url
	  schemes. Rewrote the module to make use of this command when
	  declaring the standard schemes like ftp, http, ... Fixed a bug
	  in the url declarations (access to namespace basic was
	  incorrect). The command takes care to update the overall
	  variables tracking scheme information.

	* pkgIndex.tcl: Added the new sub-package to our package index.

	* urn.test: 
	* urn-scheme.tcl: New files, new sub-packages, provide the URN
	  schema for uri's and associated testsuite.

2001-08-21  Don Porter <dgp@users.sourceforge.net>

	* uri.n: Corrected title.  The 'uri' package does not
	provide "Tcl Built-In Commands."

2001-07-10  Andreas Kupries <andreas_kupries@users.sourceforge.net>

	* uri.tcl: Frink 2.2 run, fixed dubious code.

2001-06-21  Andreas Kupries <andreas_kupries@users.sourceforge.net>

	* uri.tcl: Fixed dubious code reported by frink.

2000-09-06  Brent Welch  <welch@ajubasolutions.com>

	* uri.tcl:
	* uri.test:
	Added https support

2000-07-20  Eric Melski  <ericm@ajubasolutions.com>

	* uri.test:
	* uri.tcl: Applied patch from Andreas Kupries, to correct infinite loop
	condition in uri::canonicalize.

2000-06-16  Eric Melski  <ericm@ajubasolutions.com>

	* uri.test: Fixed bad test, added tcltest::cleanupTests call.

2000-06-13  Eric Melski  <ericm@scriptics.com>

	* uri: initial import of uri package.
